<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_win_loose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wovilon.pingpong1.WinLooseActivity">

    <TextView
        android:text="@string/YouWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/WinLoose"
        android:textAllCaps="true"
        android:textColor="@color/GreenCol"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp" />

    <Button
        android:text="@string/Retry"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:onClick="onPlayAgain" />

    <Button
        android:text="@string/ToMainMenu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:layout_marginStart="10dp"
        android:onClick="onMainMenu" />
</RelativeLayout>
