<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_how_to_olay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wovilon.pingpong1.HowToOlayActivity"
    android:background="@drawable/menubackground">

    <TextView
        android:text="@string/HespLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@android:color/darker_gray"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="66dp" />

    <TextView
        android:text="@string/HelpRight"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/darker_gray"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_width="150dp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/imageView6" />

    <TextView
        android:text="@string/MainAim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@android:color/darker_gray"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_height="300dp"
        app:srcCompat="@drawable/turnleft"
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_height="300dp"
        app:srcCompat="@drawable/turnright"
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
