<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_how_to_olay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wovilon.pingpong1.LevelEditorActivity"
    android:background="@drawable/menubackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="240dp"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignTop="@+id/imageView4"
            app:srcCompat="@drawable/turnright"
            android:layout_alignBottom="@+id/imageView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:singleLine="false"
            android:text="@string/HelpRight"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/imageView6"
            android:layout_below="@+id/imageView6"
            android:layout_marginTop="27dp"
            android:singleLine="false"
            android:text="@string/MainAim"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="240dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="27dp"
            app:srcCompat="@drawable/turnleft" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:singleLine="false"
            android:text="@string/HespLeft"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>
